@@ -1,7 +1,8 @@
 package com.mdolat.gameoflife.board;
 
 import com.mdolat.gameoflife.utils.BoardsManager;
-import com.google.common.collect.ImmutableList;
+import io.vavr.collection.List;
+import io.vavr.control.Either;
 import org.junit.Test;
 
 import static org.junit.Assert.assertFalse;
@@ -21,10 +22,10 @@ public class BoardValidationTest {
     public void shouldReturnFalseForIncorrectBoard() {
         Boolean[] booleans1 = {true, false, true, false, true, false, true, false};
         Boolean[] booleans2 = {true, false, true, false, true, false, true};
-        ImmutableList<Boolean> list1 = ImmutableList.copyOf(booleans1);
-        ImmutableList<Boolean> list2 = ImmutableList.copyOf(booleans2);
-        Board board = Board.of(ImmutableList.of(list1, list2));
+        List<Boolean> list1 = List.of(booleans1);
+        List<Boolean> list2 = List.of(booleans2);
+        Either<ErrorMessage, Board> board = Board.of(List.of(list1, list2));
 
-        assertFalse(BoardValidation.isValid(board));
+        assertFalse(BoardValidation.isValid(board.get()));
     }
 }
